tests/baselines/reference/classOverloadForFunction2.errors.txt
tests/cases/compiler/classOverloadForFunction2.ts(1,10): error TS2300: Duplicate identifier 'bar'.
tests/cases/compiler/classOverloadForFunction2.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/compiler/classOverloadForFunction2.ts(2,7): error TS2300: Duplicate identifier 'bar'.


==== tests/cases/compiler/classOverloadForFunction2.ts (3 errors) ====
    function bar(): string;
             ~~~
!!! error TS2300: Duplicate identifier 'bar'.
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    class bar {}
          ~~~
!!! error TS2300: Duplicate identifier 'bar'.